@@ -34,7 +34,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $OpenBSD: sshd.8,v 1.113 2001/04/10 09:13:22 itojun Exp $
+.\" $OpenBSD: sshd.8,v 1.114 2001/04/11 16:25:31 lebel Exp $
 .Dd September 25, 1999
 .Dt SSHD 8
 .Os
@@ -43,7 +43,7 @@
 .Nd OpenSSH ssh daemon
 .Sh SYNOPSIS
 .Nm sshd
-.Op Fl diqD46
+.Op Fl deiqD46
 .Op Fl b Ar bits
 .Op Fl f Ar config_file
 .Op Fl g Ar login_grace_time
@@ -263,6 +263,10 @@ When this option is specified
 will not detach and does not become a daemon.
 This allows easy monitoring of
 .Nm sshd .
+.It Fl e
+When this option is specified,
+.Nm
+will send the output to the standard error instead of the system log.
 .It Fl V Ar client_protocol_id
 SSH-2 compatibility mode.
 When this option is specified
